After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645236 - Don't leak translate queue in GdkDisplay
Don't leak translate queue in GdkDisplay
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-03-19 16:32 UTC by Garrett Regier
Modified: 2011-04-09 01:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't leak translate queue in GdkDisplay (5.74 KB, patch)
2011-03-19 16:32 UTC, Garrett Regier
needs-work Details | Review

Description Garrett Regier 2011-03-19 16:32:52 UTC
Created attachment 183795 [details] [review]
Don't leak translate queue in GdkDisplay

Don't leak translate queue in GdkDisplay
Comment 1 Matthias Clasen 2011-03-21 03:02:20 UTC
Why replace the queue by an array ? 

That seems entirely unrelated to not leaking it...
Comment 2 Garrett Regier 2011-03-21 03:04:00 UTC
By replacing it with the array when the GdkDisplay frees it the array's free func will free the elements.
Comment 3 Matthias Clasen 2011-03-21 11:48:12 UTC
I'd rather keep the queue and add the one line to free the elements.