Free the translate queue when closing a display

Not that many people are ever going to hit this.
https://bugzilla.gnome.org/show_bug.cgi?id=645236